--- a/index.html
+++ b/index.html
@@ -1519,12 +1519,12 @@
               <!-- TT-SOCAIL -->
               <ul class="tt-socail">
                 <li>
-                  <a href="#"
+                  <a href="https://www.facebook.com/SocialLikers/"
                     ><i class="fa fa-facebook" aria-hidden="true"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="https://www.linkedin.com/company/social-likers/"
                     ><i class="fa fa-linkedin" aria-hidden="true"></i
                   ></a>
                 </li>
@@ -1535,7 +1535,7 @@
                 </li>
 
                 <li>
-                  <a href="#"
+                  <a href="https://www.instagram.com/social_likers_/"
                     ><i class="fa fa-instagram" aria-hidden="true"></i
                   ></a>
                 </li>
