--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link rel="stylesheet" href="styleforman.css" />
    
     <script src="scriptformovingman.js"></script>
-     <script src="community.js"></script>
+     <!-- <script src="community.js"></script> -->
   </head>
 
   <body style="margin: 0px; padding: 0px;">
@@ -1323,16 +1323,17 @@
       aria-hidden="true"
     >
       <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bolder">
+        <div class="modal-content" style="background-color: #CCFFCC;font-family: 'Quicksand',sans-serif;">
+          <div class="modal-header text-center" style="background-color: #215E21;color: white;">
+            <h2 class="modal-title w-100 font-weight-bolder" >
               Join Our Whatsapp Community
-            </h4>
+            </h2>
             <button
               type="button"
               class="close"
               data-dismiss="modal"
               aria-label="Close"
+              style="color: #e0e0d1;"
             >
               <span aria-hidden="true">&times;</span>
             </button>
